Update bin/rails file to be executable

--- a/app/views/search_queries/index.html.erb
+++ b/app/views/search_queries/index.html.erb
@@ -1,6 +1,6 @@
 <div class="search-list-wrapper">
   <div class="search-list-header">
-    <h1>"Your recent searches"</h1>
+    <h1>"Your recent activities"</h1>
   </div>
   <div class="search-list-content">
     <%= render partial: "list", locals: { searchQueries: @searchQueries } %>
