--- a/app/views/search_queries/index.html.erb
+++ b/app/views/search_queries/index.html.erb
@@ -3,7 +3,7 @@
     <h1>"Your recent activities"</h1>
   </div>
   <div class="search-list-content">
-    <%= render partial: "list", locals: { searchQueries: @searchQueries } %>
+    <%= render partial: "list", locals: { search_queries: @search_queries } %>
   </div>
 
   <div class="go-back-button">
