--- a/app/views/search_queries/_list.html.erb
+++ b/app/views/search_queries/_list.html.erb
@@ -1,5 +1,5 @@
 <ol class='search-list'>  
-  <% @searchQueries.each do |searchQuery| %>
+  <% @search_queries.each do |searchQuery| %>
     <li class="search"><%= searchQuery.query %></li>
   <% end %>
 </ol>
