--- a/app/views/search_queries/_list.html.erb
+++ b/app/views/search_queries/_list.html.erb
@@ -1,5 +1,5 @@
 <ol class='search-list'>  
-  <% @search_queries.each do |searchQuery| %>
-    <li class="search"><%= searchQuery.query %></li>
+  <% @search_queries.each do |search_query| %>
+    <li class="search"><%= search_query.query %></li>
   <% end %>
 </ol>
